<resources>
    <!-- APP CONFIG -->
    <string name="app_name">ASGame</string>
    <string name="stucomGamesWSGetGames">http://stucom.flx.cat/game/api/game</string>
    <string name="stucomGamesWSGetConcreteGame">http://stucom.flx.cat/game/api/game/%d</string>
    <string name="stucomGamesWSGetUsers">http://stucom.flx.cat/game/api/user</string>
    <string name="stucomGamesWSGetConcreteUser">http://stucom.flx.cat/game/api/user/%d</string>
    <string name="stucomGamesApiKey">48d256f9583d5e3a1932242f152fcbf6</string>

    <!-- MAIN -->
    <string name="mainSubtitle">The Retarded Legend</string>
    <string name="mainPlayBtn">Play!</string>
    <string name="mainRankingBtn">Ranking</string>
    <string name="mainSettingsBtn">Settings</string>
    <string name="mainAboutUsBtn">About us</string>
    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="settingsName">Name:</string>
    <string name="settingsTakePhoto">Take photo</string>
    <string name="settingsAddPhoto">Select from gallery</string>
    <!-- ABOUT US -->
    <string name="aboutUsTitle">About us</string>
    <string name="aboutUsDescription">We are a funny company 24/7 committed with Phat Pepe, nowadays known as PJS. His incredible rapping skills have no precedents, and with this game we want to promote him to everybody around the world.</string>
    <string name="aboutUsVideoDescription">Check out this video to know more about Phat Pepe</string>
    <!-- RANKING -->
    <string name="rankingTitle">Ranking</string>
    <string name="labelLevel">Level</string>
    <string name="userScores">%s scores</string>


    <!-- GENERIC BUTTONS -->
    <string name="clickHere">Click here</string>
</resources>
