<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.apporelbotna.asgame.SettingsActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@+id/tvSettingsName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/tvSettingsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextName"
        android:layout_marginStart="24dp"
        android:layout_toStartOf="@+id/tvSettingsTitle"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        tools:text="@string/settingsName" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        app:srcCompat="@android:drawable/star_big_on" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUser"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_dark"
        android:fontFamily="casual"
        android:text="@string/settingsTakePhoto"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTakePhoto"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:fontFamily="casual"
        android:text="@string/settingsAddPhoto"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
